force-app/main/default/objects/Inactive_Tracking__c/Inactive_Tracking__c.object-meta.xml
<CustomObject>
    <description>Tracks dir case's inactive duration</description>
    <label>Inactive &amp; Stay Tracking</label>
    <nameField>
        <displayFormat>IT-{00000}</displayFormat>
        <label>Inactive Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inactive &amp; Stay Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>