force-app/main/default/objects/Inactive_Tracking__c/fields/Attempt_Outcome_Successful_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Outcome_Successful_Hidden__c</fullName>
    <description>Combine outcomes to use in inactive duration formula field.</description>
    <formula>OR(ISPICKVAL(X1st_Attempt_Outcome__c, 'Successful'),  ISPICKVAL(X2nd_Attempt_Outcome__c, 'Successful'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attempt Outcome Successful Hidden</label>
    <type>Checkbox</type>
</CustomField>