force-app/main/default/objects/Inactive_Tracking__c/fields/Case_issue_claim_value__c.field-meta.xml
<CustomField>
    <fullName>Case_issue_claim_value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case issue- claim value</label>
    <type>Checkbox</type>
</CustomField>