force-app/main/default/objects/Inactive_Tracking__c/fields/Case_issue_type_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Case_issue_type_of_issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case issue- type of issue</label>
    <type>Checkbox</type>
</CustomField>