force-app/main/default/objects/Inactive_Tracking__c/fields/Case_issue_type_of_issue_LIST__c.field-meta.xml
<CustomField>
    <fullName>Case_issue_type_of_issue_LIST__c</fullName>
    <label>Case issue type of issue LIST</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>