force-app/main/default/objects/Inactive_Tracking__c/fields/Claimant_Respond_Date__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Respond_Date__c</fullName>
    <inlineHelpText>Enter the date the Claimant provided the complete information you requested so a conference can be scheduled.</inlineHelpText>
    <label>Claimant Respond Date</label>
    <type>Date</type>
</CustomField>