force-app/main/default/objects/Inactive_Tracking__c/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <label>Closure Date</label>
    <type>Date</type>
</CustomField>