force-app/main/default/objects/Inactive_Tracking__c/fields/Comment_Entry__c.field-meta.xml
<CustomField>
    <fullName>Comment_Entry__c</fullName>
    <label>Comment Entry</label>
    <type>TextArea</type>
</CustomField>