force-app/main/default/objects/Inactive_Tracking__c/fields/Date_Lifted__c.field-meta.xml
<CustomField>
    <fullName>Date_Lifted__c</fullName>
    <inlineHelpText>Effective date of ending the stay</inlineHelpText>
    <label>Date Lifted</label>
    <type>Date</type>
</CustomField>