force-app/main/default/objects/Inactive_Tracking__c/fields/Date_Stayed__c.field-meta.xml
<CustomField>
    <fullName>Date_Stayed__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Effective date of the stay</inlineHelpText>
    <label>Date Stayed</label>
    <type>Date</type>
</CustomField>