force-app/main/default/objects/Inactive_Tracking__c/fields/Defendant_entity_contact_info_LIST__c.field-meta.xml
<CustomField>
    <fullName>Defendant_entity_contact_info_LIST__c</fullName>
    <label>Defendant entity contact info LIST</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>