force-app/main/default/objects/Inactive_Tracking__c/fields/Defendant_entity_contact_information__c.field-meta.xml
<CustomField>
    <fullName>Defendant_entity_contact_information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant entity contact information</label>
    <type>Checkbox</type>
</CustomField>