force-app/main/default/objects/Inactive_Tracking__c/fields/Docket_to_First_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Docket_to_First_Attempt__c</fullName>
    <formula>X1st_Attempt_Date__c -  Case_Management__r.Date_of_Docket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docket to First Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>