force-app/main/default/objects/Inactive_Tracking__c/fields/Documentation_needed_LIST__c.field-meta.xml
<CustomField>
    <fullName>Documentation_needed_LIST__c</fullName>
    <label>Documentation needed LIST</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>