force-app/main/default/objects/Inactive_Tracking__c/fields/Inactive_Closure_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Closure_Sent_Date__c</fullName>
    <description>Date entry required to generate the Inactive Closure Notice</description>
    <inlineHelpText>Enter date Inactive Closure Notice was sent to the Claimant. At least 120 days after Inactive Status Notice was sent. Date entry is required to generated Inactive Closure Notice document.</inlineHelpText>
    <label>Inactive Closure Sent Date</label>
    <type>Date</type>
</CustomField>