force-app/main/default/objects/Inactive_Tracking__c/fields/Inactive_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_End_Date__c</fullName>
    <inlineHelpText>The date the inactivity period is lifted due to a case closure or because the Claimant responded during the Inactive period.</inlineHelpText>
    <label>Inactive End Date</label>
    <type>Date</type>
</CustomField>