force-app/main/default/objects/Inactive_Tracking__c/fields/PCN_Inactive_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PCN_Inactive_Start_Date__c</fullName>
    <description>Inactive Start Date upddated with PCN Sent Date by flow</description>
    <inlineHelpText>The date the PCN notice is sent. This triggers a 60-day waiting period where the claim is on hold pending the Claimant's response. If the Claimant fails to respond, the case goes into an inactivity period of up to 120 days.</inlineHelpText>
    <label>PCN - Inactive Start Date</label>
    <type>Date</type>
</CustomField>