force-app/main/default/objects/Inactive_Tracking__c/fields/PCN_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>PCN_Sent_Date__c</fullName>
    <description>This field needs to be populated in order to generate documents</description>
    <inlineHelpText>Enter date PCN was sent to the Claimant. At least 15 days after 2nd attempt was made. Date entry is required to generate PCN document.</inlineHelpText>
    <label>PCN Sent Date</label>
    <type>Date</type>
</CustomField>