force-app/main/default/objects/Inactive_Tracking__c/fields/Plaintiff_contact_information__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_contact_information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plaintiff contact information</label>
    <type>Checkbox</type>
</CustomField>