force-app/main/default/objects/Inactive_Tracking__c/fields/Stay_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stay_Duration__c</fullName>
    <formula>IF( NOT(ISNULL(Date_Lifted__c)), Date_Lifted__c -  Date_Stayed__c ,  Todays_Date_Hidden__c - Date_Stayed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stay Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>