force-app/main/default/objects/Inactive_Tracking__c/fields/Stay_Type__c.field-meta.xml
<CustomField>
    <fullName>Stay_Type__c</fullName>
    <label>Stay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>BOFE</fullName>
            </value>
            <value>
                <fullName>Continuance - by Plaintiff</fullName>
            </value>
            <value>
                <fullName>Continuance - by Defendant</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Legal Hold</fullName>
            </value>
            <value>
                <fullName>Mechanic’s Lien</fullName>
            </value>
            <value>
                <fullName>Pending Settlement</fullName>
            </value>
            <value>
                <fullName>Personal Service</fullName>
            </value>
            <value>
                <fullName>Plaintiff Incarcerated</fullName>
            </value>
            <value>
                <fullName>Settlement - Payment Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>