force-app/main/default/objects/Inactive_Tracking__c/fields/Todays_Date_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Todays_Date_Hidden__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Mimicking system.today() to use in DLRS roll up. Update nightly by class WCAbatchInactiveTrackingTodayUpdate</description>
    <label>Todays Date Hidden</label>
    <type>Date</type>
</CustomField>