force-app/main/default/objects/Inactive_Tracking__c/fields/X1st_Attempt_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>X1st_Attempt_Contact_Info__c</fullName>
    <inlineHelpText>Enter the phone number/ email/ mailing address used to contact the Claimant on 1st attempt.</inlineHelpText>
    <label>1st Attempt Contact Info</label>
    <type>TextArea</type>
</CustomField>