force-app/main/default/objects/Inactive_Tracking__c/fields/X1st_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Attempt_Date__c</fullName>
    <inlineHelpText>Enter date of 1st attempt made to contact the Claimant.
The date first attempt must be a date on or after the creation of the Inactive Record, or no less than 5 days prior to the creation of the Inactive Record. If the first attempt date was made 5 days prior to the creation of the Inactive Record, the Senior deputy can modify the date</inlineHelpText>
    <label>1st Attempt Date</label>
    <type>Date</type>
</CustomField>