force-app/main/default/objects/Inactive_Tracking__c/fields/x1st_Attempt_less_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>x1st_Attempt_less_Created_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger to fire validation rule from flow "WCA Inactive Tracking Validation Trigger"</description>
    <label>x1st Attempt less Created Date</label>
    <type>Checkbox</type>
</CustomField>