force-app/main/default/objects/Inactive_Tracking__c/fields/X1st_Attempt_Method__c.field-meta.xml
<CustomField>
    <fullName>X1st_Attempt_Method__c</fullName>
    <label>1st Attempt Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email &amp; Phone</fullName>
                <default>true</default>
                <label>Email &amp; Phone</label>
            </value>
            <value>
                <fullName>Email &amp; Mail</fullName>
            </value>
            <value>
                <fullName>Phone &amp; Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>