force-app/main/default/objects/Inactive_Tracking__c/fields/X2nd_Attempt_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Attempt_Contact_Info__c</fullName>
    <inlineHelpText>Enter the phone number/ email/ mailing address used to contact the Claimant on 2nd attempt.</inlineHelpText>
    <label>2nd Attempt Contact Info</label>
    <type>TextArea</type>
</CustomField>