force-app/main/default/objects/Inactive_Tracking__c/recordTypes/Intake_Stage.recordType-meta.xml
<RecordType>
    <fullName>Intake_Stage</fullName>
    <active>true</active>
    <label>Intake Stage</label>
</RecordType>