force-app/main/default/objects/Inactive_Tracking__c/recordTypes/Stay.recordType-meta.xml
<RecordType>
    <fullName>Stay</fullName>
    <active>true</active>
    <label>Stay</label>
</RecordType>