force-app/main/default/objects/Inactive_Tracking__c/validationRules/Both_PCN_Date_and_Claimant_Resp_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_PCN_Date_and_Claimant_Resp_Date</fullName>
    <active>false</active>
    <description>PCN Sent Date is entered but Claimant Respond Date is filled</description>
    <errorConditionFormula>AND(NOT(ISNULL( PCN_Sent_Date__c )),NOT(ISNULL( Claimant_Respond_Date__c)))</errorConditionFormula>
    <errorMessage>Claimant Respond Date is filled then PCN Sent Date cannot be entered, as PCN is not expected to be sent.</errorMessage>
</ValidationRule>