force-app/main/default/objects/Inactive_Tracking__c/validationRules/Case_must_have_IRR.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_must_have_IRR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Profile.Name = "System Administrator"),
NOT($Profile.Name = "System Administrator LTD"),
Record_Type_Name__c = 'Intake Stage',
ISBLANK(Case_Management__r.Intake_Deputy__c)
)</errorConditionFormula>
    <errorMessage>Intake Deputy must be filled before creating Inactive Tracking record</errorMessage>
</ValidationRule>