force-app/main/default/objects/Inactive_Tracking__c/validationRules/Claim_Res_Date_greater_than_PCN_Sent_Dat.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Res_Date_greater_than_PCN_Sent_Dat</fullName>
    <active>false</active>
    <description>Claim Respond Date is greater than Inactive Closure Sent Date</description>
    <errorConditionFormula>Claimant_Respond_Date__c &gt;  ( PCN_Sent_Date__c + 180)</errorConditionFormula>
    <errorMessage>Claim Respond Date is greater than 180 days of the PCN Sent Date</errorMessage>
</ValidationRule>