force-app/main/default/objects/Inactive_Tracking__c/validationRules/Claim_Res_Less_than_1st_Attempt_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Res_Less_than_1st_Attempt_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Claimant_Respond_Date__c &lt; X1st_Attempt_Date__c</errorConditionFormula>
    <errorMessage>Claim Respond Date is less than 1st Attempt Date</errorMessage>
</ValidationRule>