force-app/main/default/objects/Inactive_Tracking__c/validationRules/Comments_required_for_new_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_required_for_new_record</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( RecordType.DeveloperName != 'Stay',  ISNEW() &amp;&amp; ISBLANK(Comment_Entry__c))</errorConditionFormula>
    <errorMessage>Please enter comments via 'Comment Entry' field</errorMessage>
</ValidationRule>