force-app/main/default/objects/Inactive_Tracking__c/validationRules/Date_Lifted_cannot_be_less_Stayed.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Lifted_cannot_be_less_Stayed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Record_Type_Name__c = 'Stay',
Date_Lifted__c -  Date_Stayed__c &lt; 0
)</errorConditionFormula>
    <errorMessage>Date Lifted cannot be less than Date Stayed</errorMessage>
</ValidationRule>