force-app/main/default/objects/Inactive_Tracking__c/validationRules/Defendant_Account_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Defendant_Account_Name_Required</fullName>
    <active>true</active>
    <description>When Continuance - by Defendant is selected</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Stay_Type__c, 'Continuance - by Defendant' ),
 ISBLANK(Defendant_Account_Name__c))</errorConditionFormula>
    <errorMessage>Please enter Defendant Account Name</errorMessage>
</ValidationRule>