force-app/main/default/objects/Inactive_Tracking__c/validationRules/Inact_Send_Date_less_than_PCN_plus_60.validationRule-meta.xml
<ValidationRule>
    <fullName>Inact_Send_Date_less_than_PCN_plus_60</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(NOT ISNULL(Inactive_Notice_Sent_Date__c ), NOT ISNULL(PCN_Sent_Date__c )),
(Inactive_Notice_Sent_Date__c &lt;= PCN_Sent_Date__c + 60)
)</errorConditionFormula>
    <errorMessage>Inactive Notice Sent Date must be greater than 60 days from PCN Sent Date</errorMessage>
</ValidationRule>