force-app/main/default/objects/Inactive_Tracking__c/validationRules/Inactive_Closure_Date_wo_INS.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Closure_Date_wo_INS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNULL(Inactive_Closure_Sent_Date__c)),
ISNULL (Inactive_Notice_Sent_Date__c)
)</errorConditionFormula>
    <errorMessage>Inactive Notice Sent Date must be filled prior to Inactive Closure Sent Date</errorMessage>
</ValidationRule>