force-app/main/default/objects/Inactive_Tracking__c/validationRules/Inactive_End_Date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_End_Date_rule</fullName>
    <active>false</active>
    <description>Inactive End Date must be equal to Claimant Respond Date</description>
    <errorConditionFormula>AND(NOT(ISNULL( Inactive_End_Date__c )), NOT(ISNULL( Claimant_Respond_Date__c )), Inactive_End_Date__c  &lt;&gt;  Claimant_Respond_Date__c )</errorConditionFormula>
    <errorMessage>Inactive End Date must be equal to Claimant Respond Date</errorMessage>
</ValidationRule>