force-app/main/default/objects/Inactive_Tracking__c/validationRules/Inactiving_Tracking_Checkbox_and_List.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactiving_Tracking_Checkbox_and_List</fullName>
    <active>true</active>
    <errorConditionFormula>AND (

     RecordType.DeveloperName != 'Stay', 

     OR ( AND ( Case_issue_claim_value__c == true,
         ISBLANK(Case_issue_claim_value_LIST__c ) ),

         AND ( Defendant_entity_contact_information__c == true ,
         ISBLANK( Defendant_entity_contact_info_LIST__c ) ),

         AND ( Case_issue_type_of_issue__c == true ,
         ISBLANK(Case_issue_type_of_issue_LIST__c )),

         AND ( Documentation_needed__c == true ,
         ISBLANK ( Documentation_needed_LIST__c ))
         ),

    AND ( $Profile.Name != 'System Administrator',
          $Profile.Name != 'System Administrator LTD'),

    OR ( ISNEW(), DATEVALUE(CreatedDate) &gt; DATEVALUE("2024-9-27") )

)</errorConditionFormula>
    <errorMessage>Enter the Type of Information Needed in the respective LIST box.</errorMessage>
</ValidationRule>