force-app/main/default/objects/Inactive_Tracking__c/validationRules/No_New_Stay_Record_on_Close_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>No_New_Stay_Record_on_Close_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), ISPICKVAL( Case_Management__r.Status__c , 'Closed'))</errorConditionFormula>
    <errorMessage>Case is closed, do not enter a new Inactive or Stay record</errorMessage>
</ValidationRule>