force-app/main/default/objects/Inactive_Tracking__c/validationRules/Only_Senior_Can_Invalidate_a_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Senior_Can_Invalidate_a_Record</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
NOT($Permission.LCO_Senior),
ISCHANGED( Invalid__c ),
Invalid__c = TRUE
)</errorConditionFormula>
    <errorMessage>Only Senior can invalidate a record</errorMessage>
</ValidationRule>