force-app/main/default/objects/Inactive_Tracking__c/validationRules/PCN_Date_Greater_than_2nd_plus_15.validationRule-meta.xml
<ValidationRule>
    <fullName>PCN_Date_Greater_than_2nd_plus_15</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(PCN_Sent_Date__c  &lt; (X2nd_Attempt_Date__c) + 15),
DATEVALUE(CreatedDate) &gt;  DATEVALUE("2024-02-01")
)</errorConditionFormula>
    <errorMessage>PCN Sent Date must be greater or equal to 2nd Attempt Date+15 days</errorMessage>
</ValidationRule>