force-app/main/default/objects/Inactive_Tracking__c/validationRules/PCN_Date_less1st_Attempt_or_2nd_Attempt.validationRule-meta.xml
<ValidationRule>
    <fullName>PCN_Date_less1st_Attempt_or_2nd_Attempt</fullName>
    <active>true</active>
    <description>PCN Sent Date is less than 1st Attempt Date or 2nd Attempt Date</description>
    <errorConditionFormula>OR(
(AND(NOT(ISNULL( PCN_Sent_Date__c )),PCN_Sent_Date__c &lt;  X1st_Attempt_Date__c )),
(AND(NOT(ISNULL( PCN_Sent_Date__c )),PCN_Sent_Date__c &lt;  X2nd_Attempt_Date__c ))
)</errorConditionFormula>
    <errorMessage>PCN Sent Date cannot be less than 1st Attempt Date or 2nd Attempt Date.</errorMessage>
</ValidationRule>