force-app/main/default/objects/Inactive_Tracking__c/validationRules/Preventing_Open_Stay_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Preventing_Open_Stay_Duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(), Record_Type_Name__c = 'Stay',
Case_Management__r.Open_Stay_Counter__c &gt; 0
)</errorConditionFormula>
    <errorMessage>Fill in Date Lifted of the existing Stay Record before creating another Stay</errorMessage>
</ValidationRule>