force-app/main/default/objects/Inactive_Tracking__c/validationRules/Sec_Attpt_Date_Needed_for_PCN_Sent_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Sec_Attpt_Date_Needed_for_PCN_Sent_Date</fullName>
    <active>true</active>
    <description>2nd Attempt Date must be entered when PCN Sent Date is filled.</description>
    <errorConditionFormula>AND(
ISCHANGED(PCN_Sent_Date__c),
NOT(ISNULL(PCN_Sent_Date__c)),
ISBLANK(X2nd_Attempt_Date__c),
DATEVALUE(CreatedDate) &gt; DATEVALUE("2024-03-29")
)</errorConditionFormula>
    <errorMessage>2nd Attempt Date must be entered when PCN Sent Date is filled.</errorMessage>
</ValidationRule>