force-app/main/default/objects/Inactive_Tracking__c/validationRules/Sec_Attpt_Method_Needed_for_2nd_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Sec_Attpt_Method_Needed_for_2nd_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( X2nd_Attempt_Date__c)),
ISBLANK(TEXT(X2nd_Attempt_Method__c)),
DATEVALUE(CreatedDate) &gt;  DATEVALUE("2024-02-01")
)</errorConditionFormula>
    <errorMessage>2nd Attempt Method must be filled when entering 2nd Attempt Date</errorMessage>
</ValidationRule>