force-app/main/default/objects/Inactive_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>X1st_Attempt_Date__c</columns>
    <columns>X2nd_Attempt_Date__c</columns>
    <columns>Date_Stayed__c</columns>
    <columns>Date_Lifted__c</columns>
    <columns>Inactive_Closure_Sent_Date__c</columns>
    <columns>Inactive_Notice_Sent_Date__c</columns>
    <columns>PCN_Sent_Date__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>